# siltstone-vk

./: CMakeLists.txt  devices.cpp  loop.cpp  main.cpp  utilities.cpp  vk06.cpp
include/: log_prefixes.hpp  vk06.hpp
include/sln/: compile_config.hpp  log_prefixes.hpp  print_info.hpp  surface.hpp  window.hpp  windowing_instance.hpp
include/sln/type/: debug_level.hpp  model.hpp  uniform_buffer_object.hpp  vertex.hpp
include/sln/util/: find_memory_type.hpp
include/sln/vkw/: buffer.hpp  command_buffer.hpp  command_pool.hpp  device.hpp  image.hpp  instance.hpp  physical_device.hpp  pipeline.hpp  print_info.hpp  spv_shader.hpp  swapchain.hpp
shaders/: fragment_shader.frag  vert.spv  vertex_shader.vert
src/: print_info.cpp  surface.cpp  window.cpp  windowing_instance.cpp
src/vkw/: buffer.cpp  command_buffer.cpp  command_pool.cpp  device.cpp  instance.cpp  physical_device.cpp  pipeline.cpp  print_info.cpp  spv_shader.cpp  swapchain.cpp
